crates/cli/tests/snapshots/activate_test__activate__supports_many_tools-13.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
_proto_activate_hook() {
  local output
  trap '' SIGINT
  output=$(proto activate zsh --export)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  trap - SIGINT
}

_proto_deactivate_hook() {
  local output
  output=$(proto deactivate zsh --export)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  chpwd_functions=(${chpwd_functions:#_proto_activate_hook})
  unfunction _proto_activate_hook _proto_deactivate_hook 2>/dev/null
}

typeset -ag chpwd_functions
if (( ! ${chpwd_functions[(I)_proto_activate_hook]} )); then
  chpwd_functions=(_proto_activate_hook $chpwd_functions)
fi

_proto_activate_hook
