crates/cli/tests/snapshots/activate_test__activate__supports_many_tools-5.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

set -gx __ORIG_PATH $PATH

function _proto_activate_hook --on-variable PWD;
  proto activate fish --export | source
end;

_proto_activate_hook
