crates/cli/tests/snapshots/activate_test__activate__supports_many_tools-7.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
function proto-activate {
  proto activate murex --export -> source
}

function proto-deactivate {
  proto deactivate murex --export -> source
  !event onPrompt proto-activate
  !function proto-activate
  !function proto-deactivate
}

event onPrompt proto-activate=before {
  proto-activate
}

proto-activate
