crates/cli/tests/snapshots/activate_test__activate__supports_many_tools-8.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
export def --env proto_activate [] {
    # Nushell has no runtime `eval`, but `source` parses and runs a file in the
    # scope that invoked it, which is enough to apply a statement list. Only a
    # hook entry defined as a string is parsed that way, and it is parsed each
    # time it runs, so the statements are written out and an entry is kept in
    # `pre_prompt` that sources the file and then empties it. The entry runs
    # after this function on every prompt, so the statements are applied on
    # the prompt after they are written, and an empty file is a no-op.
    let file = $"($nu.temp-dir)/proto_activate-($nu.pid).nu"

    # A failing command stages nothing rather than aborting the prompt, and its
    # stderr is left alone
    try { proto activate nu --export | save --force $file } catch { "" | save --force $file }

    # Other entries may be strings, closures, or records holding either, so the
    # entry is found by whole record equality, which is false across types
    let apply = { code: '# proto_activate apply
const proto_activate_file = $"($nu.temp-dir)/proto_activate-($nu.pid).nu"
source $proto_activate_file
"" | save --force $proto_activate_file' }

    $env.config = ($env.config | upsert hooks.pre_prompt { |config|
        let list = ($config | get --optional hooks.pre_prompt) | default []

        if $apply in $list { $list } else { $list | append $apply }
    })
}
export def --env proto_deactivate [] {
    # Nushell has no runtime `eval`, but `source` parses and runs a file in the
    # scope that invoked it, which is enough to apply a statement list. Only a
    # hook entry defined as a string is parsed that way, and it is parsed each
    # time it runs, so the statements are written out and an entry is kept in
    # `pre_prompt` that sources the file and then empties it. The entry runs
    # after this function on every prompt, so the statements are applied on
    # the prompt after they are written, and an empty file is a no-op.
    let file = $"($nu.temp-dir)/proto_deactivate-($nu.pid).nu"

    # A failing command stages nothing rather than aborting the prompt, and its
    # stderr is left alone
    try { proto deactivate nu --export | save --force $file } catch { "" | save --force $file }

    # Other entries may be strings, closures, or records holding either, so the
    # entry is found by whole record equality, which is false across types
    let apply = { code: '# proto_deactivate apply
const proto_deactivate_file = $"($nu.temp-dir)/proto_deactivate-($nu.pid).nu"
source $proto_deactivate_file
"" | save --force $proto_deactivate_file' }

    $env.config = ($env.config | upsert hooks.pre_prompt { |config|
        let list = ($config | get --optional hooks.pre_prompt) | default []

        if $apply in $list { $list } else { $list | append $apply }
    })
}
export-env {
    let entry = { code: "proto_activate" }

    $env.config = ($env.config | upsert hooks.env_change.PWD { |config|
        let list = ($config | get --optional hooks.env_change.PWD) | default []

        if $entry in $list { $list } else { $list | append $entry }
    })

    $env.config = ($env.config | upsert hooks.pre_prompt { |config|
        let list = ($config | get --optional hooks.pre_prompt) | default []

        if $entry in $list { $list } else { $list | append $entry }
    })
}

proto_activate
