crates/cli/tests/snapshots/activate_test__activate__supports_many_tools-9.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
function _proto_activate_hook {
  $previousExitCode = $global:LASTEXITCODE;
  $exports = proto activate powershell --export;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }
  $global:LASTEXITCODE = $previousExitCode;
}

function _proto_deactivate_hook {
  $exports = proto deactivate powershell --export;
  if ($exports) {
    $exports | Out-String | Invoke-Expression;
  }

  if (Get-Variable -Name '_proto_activate_hook_prompt' -Scope Global -ErrorAction Ignore) {
    Set-Item -Path 'function:global:prompt' -Value $global:_proto_activate_hook_prompt;
    Remove-Variable -Name '_proto_activate_hook_prompt' -Scope Global;
  }

  Remove-Item -LiteralPath 'function:_proto_activate_hook' -ErrorAction Ignore;
  Remove-Item -LiteralPath 'function:_proto_deactivate_hook' -ErrorAction Ignore;
}

if (-not (Get-Variable -Name '_proto_activate_hook_prompt' -Scope Global -ErrorAction Ignore)) {
  $global:_proto_activate_hook_prompt = $function:prompt;

  function global:prompt {
    _proto_activate_hook;
    & $global:_proto_activate_hook_prompt;
  }
};

_proto_activate_hook
