crates/cli/tests/snapshots/activate_test__activate__supports_one_tool-12.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
def proto_activate(olddir=None, newdir=None, **kwargs):
    output = $(proto activate xonsh --export)
    if output:
        execx(output)

def proto_deactivate():
    global proto_activate, proto_deactivate
    output = $(proto deactivate xonsh --export)
    if output:
        execx(output)
    for handler in list(events.on_chdir):
        if getattr(handler, '__name__', '') == 'proto_activate':
            events.on_chdir.discard(handler)
    del proto_activate, proto_deactivate

# Re-sourcing creates new function objects, so deduplicate by name
if not any(getattr(handler, '__name__', '') == 'proto_activate' for handler in events.on_chdir):
    events.on_chdir(proto_activate)

proto_activate()
