crates/cli/tests/snapshots/activate_test__activate__supports_one_tool-13.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
proto_activate() {
  local output
  trap '' SIGINT
  output=$(proto activate zsh --export)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  trap - SIGINT
}

proto_deactivate() {
  local output
  output=$(proto deactivate zsh --export)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  chpwd_functions=(${chpwd_functions:#proto_activate})
  unfunction proto_activate proto_deactivate 2>/dev/null
}

typeset -ag chpwd_functions
if (( ! ${chpwd_functions[(I)proto_activate]} )); then
  chpwd_functions=(proto_activate $chpwd_functions)
fi

proto_activate
