crates/cli/tests/snapshots/activate_test__activate__supports_one_tool-4.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

set-env __ORIG_PATH $E:PATH

fn _proto_activate_hook {
  eval (proto activate elvish --export);
}

set @edit:before-readline = $@edit:before-readline {
  _proto_activate_hook
}

_proto_activate_hook
