crates/cli/tests/snapshots/activate_test__activate__supports_one_tool-5.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
function proto-activate --on-variable PWD;
  proto activate fish --export | source
end;

function proto-deactivate;
  proto deactivate fish --export | source
  functions --erase proto-activate proto-deactivate
end;

proto-activate
